[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/Tests/test/test_enemy/test_enemy_fly.png" type="Texture" id=1]
[ext_resource path="res://src/Prototype files/flyingEnemy.gd" type="Script" id=2]
[ext_resource path="res://assets/Explosions FXs/Explosion_blue_circle/Explosion_blue_circle8.png" type="Texture" id=3]
[ext_resource path="res://assets/Explosions FXs/Explosion_blue_circle/Explosion_blue_circle3.png" type="Texture" id=4]
[ext_resource path="res://assets/Explosions FXs/Explosion_blue_circle/Explosion_blue_circle4.png" type="Texture" id=5]
[ext_resource path="res://assets/Explosions FXs/Explosion_blue_circle/Explosion_blue_circle10.png" type="Texture" id=6]
[ext_resource path="res://assets/Explosions FXs/Explosion_blue_circle/Explosion_blue_circle9.png" type="Texture" id=7]
[ext_resource path="res://assets/Explosions FXs/Explosion_blue_circle/Explosion_blue_circle5.png" type="Texture" id=8]
[ext_resource path="res://assets/Explosions FXs/Explosion_blue_circle/Explosion_blue_circle2.png" type="Texture" id=9]
[ext_resource path="res://assets/Explosions FXs/Explosion_blue_circle/Explosion_blue_circle6.png" type="Texture" id=10]
[ext_resource path="res://assets/Explosions FXs/Explosion_blue_circle/Explosion_blue_circle7.png" type="Texture" id=11]
[ext_resource path="res://assets/Explosions FXs/Explosion_blue_circle/Explosion_blue_circle1.png" type="Texture" id=12]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 185, 160 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 17.5, 7 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 9 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 8 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 3 ), ExtResource( 7 ), ExtResource( 6 ) ],
"loop": true,
"name": "explode",
"speed": 25.0
} ]

[node name="flyingEnemy" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource( 2 )

[node name="TestEnemy1" type="Sprite" parent="."]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="Hitbox" type="Area2D" parent="TestEnemy1" groups=["EnemyHurtbox"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TestEnemy1/Hitbox"]
position = Vector2( 35, -60 )
scale = Vector2( 0.999999, 0.999999 )
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 3.5, -9 )
shape = SubResource( 1 )
disabled = true

[node name="Stun_timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="deathoffscreen" type="VisibilityNotifier2D" parent="."]

[node name="explode" type="AnimatedSprite" parent="."]
position = Vector2( 4, -6 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 3 )
animation = "explode"

[connection signal="area_entered" from="TestEnemy1/Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="timeout" from="Stun_timer" to="." method="_on_Stun_timer_timeout"]
[connection signal="screen_exited" from="deathoffscreen" to="." method="_on_deathoffscreen_screen_exited"]
[connection signal="animation_finished" from="explode" to="." method="_on_explode_animation_finished"]
